Firefox/Edge: fix menu padding-bottom if overflow
When the menu scrolls, the padding at the bottom is missing. It's there
in Chrome but apparently that is non-standard behaviour.

--- a/src/menu/_menu.scss
+++ b/src/menu/_menu.scss
@@ -9,10 +9,10 @@
 		min-width: 20em;
 		overflow: auto;
 	}
+}
 
-	.card-body {
-		overflow: auto;
-	}
+.card-scroll {
+	overflow: auto;
 }
 
 .nav-item .close {
